--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>My Playlist</h2>
+	<div class="player_one">
+		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song1</a><br>
+		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">song2</a><br>
+		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">song3</a><br>
+		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">song4</a><br>
+		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song5</a>
+	</div>
+	<h3>Now playing...</h3>
+	<div class="main">
+		<video class="player_two" controls>
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+		</video>
+		
+		<audio class="player_three" controls>
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg"> 
+		</audio>
+	</div>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
